vertical aligning spinner text - iphone fix

--- a/app/scss/layout/_about.scss
+++ b/app/scss/layout/_about.scss
@@ -1,6 +1,9 @@
 #about {
 	background: $color-moon;
-	font-size: $font-size-h4;
+
+	@include breakpoint(tablet) {
+		font-size: $font-size-h4;
+	}
 
 	header h2 {
 		color: $color-moon;
